# fastapi_books_store

./: .env  Dockerfile  Requirements.txt  docker-compose.yml  pyproject.toml  readme.md
src/: .env  alembic.ini  app.py  config.py  database.py  main.py  sql_app.db
src/application/: config.py  database.py  exceptions.py
src/application/repository/: authors.py  books.py  validators.py
src/application/services/: authors.py  books.py
src/authors/: __init__.py  exceptions.py  models.py  routes.py  schemas.py  services.py
src/books/: __init__.py  exceptions.py  models.py  routes.py  schemas.py  services.py
src/carts/: __init__.py  routes.py
src/catalog/: __init__.py  routes.py
src/controllers/: __init__.py  bootstrap.py  handlers.py
src/controllers/authors/: routes.py  schemas.py
src/controllers/books/: routes.py  schemas.py
src/migrations/: env.py
src/migrations/versions/: 0b3b4a8d6100_add_book_author_fk.py  3b239b4eb29c_.py  6016a1f39cc2_update_library_table.py  66be5255a93c_initial.py  b560e721727c_create_library_table.py
src/models/: authors.py  books.py
src/utils/: dependencies.py  handlers.py  responses.py  validators.py
