[tool.poetry]
name = "library-fastapi-proj"
version = "0.1.0"
description = ""
authors = ["shalom-babka <ikeadfghj@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.86.0"
sqlalchemy = "^1.4.43"
alembic = "^1.8.1"
fastapi-utils = "^0.2.1"
uvicorn = "^0.19.0"
python-dotenv = "^0.21.0"
asyncpg = "^0.27.0"
greenlet = "^2.0.1"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
